同步于: 10月19日12时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -13,8 +13,8 @@
 #### [ 深陷性丑闻的张高丽二十大露面 依然“扑克脸”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019260.md)
 #### [ 中共二十大习下还是习上？江峰章天亮怎么说](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847492.md)
 #### [ 习近平二十大报告89次提“安全”释信号(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019325.md)
-#### [ 内斗激烈 中共二十大常委名单流出多个新版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553861.md)
 #### [ 【晚间新闻】中共二十大抗议中召开 习现异常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847874.md)
+#### [ 内斗激烈 中共二十大常委名单流出多个新版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553861.md)
 #### [ 章天亮: 习二十大报告 四常委缺席 江朱坐镇西山军委？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663000.md)
 #### [ 中共审查 习二十大讲话口误秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847857.md)
 #### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
@@ -27,27 +27,27 @@
 #### [ 二十大习近平讲话口误 全网秒遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019476.md)
 #### [ 二十大之际 大陆社媒流传纪念赵紫阳旧文](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847033.md)
 #### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
+#### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
 #### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
-#### [ 二十大习做报告期间 胡春华离场至少5分钟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846951.md)
+#### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663252.md)
 #### [ 北京四通桥事件后 网民被传唤要求卸载VPN](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847833.md)
+#### [ 二十大习做报告期间 胡春华离场至少5分钟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846951.md)
 #### [ 分析：二十大后 国际人才或加速撤离中国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847058.md)
 #### [ 中国新一轮大爆发可能已经开始](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663114.md)
 #### [ 布林肯：中共拟以“更快时间线”统一台湾](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847595.md)
-#### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663252.md)
-#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
 #### [ 【热门话题】王岐山妻侄被抓/ 沪青浦区深夜封控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554071.md)
+#### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
 #### [ 十年一梦同归殊途 二十大泽国江山入战图(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018712.md)
 #### [ 北京四通桥事件发酵 大陆多地惊现雷同标语(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019256.md)
+#### [ 美媒最新爆料：下届常委名单习近平亲信上榜 胡春华不见了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663324.md)
 #### [ 习近平二十大报告只读32页 完整版72页](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554046.md)
 #### [ 陆高校发紧急通知 禁学生转发四通桥信息](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847918.md)
-#### [ 美媒最新爆料：下届常委名单习近平亲信上榜 胡春华不见了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663324.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 【新闻看点】中共突延发布经济数据 搞什么鬼？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847516.md)
 #### [ 二十大后 发改委称更开放 专家：虚晃一枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847367.md)
 #### [ 四通桥标语点燃火种 西安要习到站下车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662859.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 传宁波爆疫 上万红码聚集做核酸 市民“吓人哪太严重”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019326.md)
-#### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
 #### [ 习近平“打虎”波及王岐山 妻侄姚庆被查](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554079.md)
+#### [ 习近平的二十大报告极力掩盖一个天大事实(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019520.md)
 #### [ 专家：习近平缺乏安全感 比2017年更“悲观”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553987.md)
-#### [ 布林肯：中共拟以“更快时间线”统一台湾](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847595.md)
-#### [ 港人被殴 英警方进入中领馆抢人 首相发声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847363.md)
+#### [ 中共二十大成表忠会 媒体人：官场清洗不会停](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847842.md)
