--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -41,13 +41,13 @@
 #### [ 二十大开幕 习近平任报告起草组组长等同宣告连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019235.md)
 #### [ 北京四通桥事件发酵 大陆多地惊现雷同标语(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019256.md)
 #### [ 十年一梦同归殊途 二十大泽国江山入战图(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018712.md)
-#### [ 习近平二十大报告只读32页 完整版72页](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554046.md)
 #### [ 中共吹捧二十大不闻百姓疾苦 民反问记者“搞传媒的听懂了？”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019497.md)
+#### [ 习近平二十大报告只读32页 完整版72页](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554046.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 二十大表忠狂潮下 中共恐惧政权垮台(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019526.md)
 #### [ 陆高校发紧急通知 禁学生转发四通桥信息](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847918.md)
 #### [ 二十大后 发改委称更开放 专家：虚晃一枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847367.md)
+#### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
 #### [ 【新闻看点】中共突延发布经济数据 搞什么鬼？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847516.md)
 #### [ 四通桥标语点燃火种 西安要习到站下车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662859.md)
-#### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
 #### [ 传宁波爆疫 上万红码聚集做核酸 市民“吓人哪太严重”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019326.md)
-#### [ 四通桥反党标语在中国各地和全球传开](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848108.md)
