同步于: 10月19日17时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -7,8 +7,8 @@
 #### [ 习近平近臣谁上位?二十大入常分析各异(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019442.md)
 #### [ 习近平能谋得三连任 却深陷五大困局(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019334.md)
 #### [ 习近平的二十大报告极力掩盖一个天大事实(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019520.md)
-#### [ 二十大习做报告 胡一脸愁苦 前常委们姿态各异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846320.md)
 #### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
+#### [ 二十大习做报告 胡一脸愁苦 前常委们姿态各异](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13846320.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 【秦鹏直播】习仍感觉不安全？王岐山妻侄被抓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847398.md)
 #### [ 二十大谁入常？谁当总理？习近平或有新考量](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847449.md)
@@ -27,8 +27,8 @@
 #### [ 二十大之际 大陆社媒流传纪念赵紫阳旧文](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847033.md)
 #### [ 四通桥事件发酵 传清华大学禁学生自助打印](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847131.md)
 #### [ 中共二十大抗议中登场 习现异常 元老不鼓掌 看点一览](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553909.md)
-#### [ 海外热传中共常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847705.md)
 #### [ 二十大表忠狂潮下 中共恐惧政权垮台(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019526.md)
+#### [ 海外热传中共常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847705.md)
 #### [ 【天亮时分】决定习是否连任 军队明确表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848045.md)
 #### [ 二十大之际 大陆社媒流传纪念赵紫阳旧文](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847033.md)
 #### [ 戳破习的皇帝梦？北京四通桥事件冲击二十大(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019186.md)
@@ -47,7 +47,7 @@
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 陆高校发紧急通知 禁学生转发四通桥信息](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847918.md)
 #### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
+#### [ 四通桥反党标语在中国各地和全球传开](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848108.md)
 #### [ 二十大后 发改委称更开放 专家：虚晃一枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847367.md)
 #### [ 传宁波爆疫 上万红码聚集做核酸 市民“吓人哪太严重”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019326.md)
 #### [ 【新闻看点】中共突延发布经济数据 搞什么鬼？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847516.md)
-#### [ 四通桥标语点燃火种 西安要习到站下车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/662859.md)
