--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -20,8 +20,8 @@
 #### [ 内斗激烈 中共二十大常委名单流出多个新版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103553861.md)
 #### [ 中共审查 习二十大讲话口误秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847857.md)
 #### [ 章天亮: 习二十大报告 四常委缺席 江朱坐镇西山军委？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663000.md)
-#### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
 #### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663252.md)
+#### [ 二十大开幕式 4名中共元老不知所踪(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019242.md)
 #### [ 中共二十大 习近平核心圈子谁进谁出](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847460.md)
 #### [ 二十大习近平讲话口误 全网秒遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019476.md)
 #### [ 二十大之际 大陆社媒流传纪念赵紫阳旧文](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847033.md)
@@ -50,4 +50,4 @@
 #### [ 北京四通桥抗议升级？传高校令关闭“Airdrop”禁自助打印(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019461.md)
 #### [ 四通桥反党标语在中国各地和全球传开](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848108.md)
 #### [ 二十大后 发改委称更开放 专家：虚晃一枪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847367.md)
-#### [ 传宁波爆疫 上万红码聚集做核酸 市民“吓人哪太严重”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019326.md)
+#### [ 西方媒体怎样报导中共二十大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848308.md)
