同步于: 10月20日3时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -45,9 +45,9 @@
 #### [ 中共总领事涉打人被曝光 英议员吁立刻驱逐](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848093.md)
 #### [ 【晚间新闻】中共二十大抗议中召开 习现异常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847874.md)
 #### [ 古井贡酒单日市值蒸发124亿 与禁酒令有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848170.md)
+#### [ 王岐山等人缺席二十大代表团讨论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848317.md)
 #### [ 美国前大使：中共末日将至 支持中国人退党](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848220.md)
 #### [ 江峰: 习报告缩水 身体吿衰 这词暴露了习与中共前程](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663318.md)
 #### [ 被传半身麻痹神经坏死 古天乐自曝颈部加钛金属](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848148.md)
 #### [ 新书详述北京如何操控索罗斯等西方精英](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848278.md)
 #### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663252.md)
-#### [ 唐朝名相魏徵后裔撰写家族史 揭露中共罪恶](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848336.md)
