--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -24,13 +24,13 @@
 #### [ 四通桥反党标语在中国各地和全球传开](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848108.md)
 #### [ 习近平首次倡导“财富积累机制” 释明显信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663474.md)
 #### [ 消息：习近平党内大清洗 针对孟建柱手段“微妙”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554144.md)
-#### [ 习十年间拿下60名中央委员 学者：歼灭反习派？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019332.md)
 #### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
-#### [ 【文昭谈古论今】习近平20大透露一可怕目标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848050.md)
+#### [ 习十年间拿下60名中央委员 学者：歼灭反习派？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019332.md)
 #### [ 【热门话题】分析：二十大报告九大谎言/新常委名单出炉](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103554876.md)
+#### [ 【文昭谈古论今】习近平20大透露一可怕目标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848050.md)
 #### [ 习二十大口误成“敏感词” 被全网秒杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663477.md)
-#### [ 【天亮时分】习打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848838.md)
 #### [ 传闻中的二十大：“黑马”和意外](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663678.md)
+#### [ 【天亮时分】习打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848838.md)
 #### [ 习近平二十大报告89次提“安全”释信号(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019325.md)
 #### [ 中共审查 习二十大讲话口误秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847857.md)
 #### [ 海外热传常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13847705.md)
@@ -42,12 +42,12 @@
 #### [ 【财商天下】全球通胀如虎 为何中国低通胀？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848144.md)
 #### [ 习近平能谋得三连任 却深陷五大困局(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019334.md)
 #### [ 【禁闻】二十大常委名单海外热传 学者解析真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555074.md)
+#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845571.md)
 #### [ 人为放火？江西湖南等4省多地发生山火 民间炸锅(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019579.md)
 #### [ 与四通桥事件有关？军方二十大表态听习指挥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848489.md)
 #### [ 海外热传中共常委名单 袁红冰：应思考摧毁暴政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13847705.md)
 #### [ 布林肯：北京将以更快时间表攻台 美媒：习正为美中冲突做准备](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663351.md)
 #### [ 【秦鹏直播】驻英领事大打出手 真相让人失笑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848061.md)
-#### [ 习近平二十大报告由王沪宁操刀 掩盖天大事实(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019595.md)
-#### [ 北京反习抗议扩大？彭立发恐判重刑 莫少平愿辩护(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019594.md)
-#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13845571.md)
+#### [ 习近平加冕“人民领袖”尊称 中国越来越像北韩？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663654.md)
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663414.md)
+#### [ 北京反习抗议扩大？彭立发恐判重刑 莫少平愿辩护(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019594.md)
