同步于: 10月21日4时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -15,8 +15,8 @@
 #### [ 谁能进入新一届中央军委 就看谁“对习近平绝对忠诚”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019451.md)
 #### [ 【天亮时分】习打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848838.md)
 #### [ 习近平加冕“人民领袖”尊称 中国越来越像北韩？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663654.md)
-#### [ 王友群：为审判江泽民、曾庆红等元凶而行动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848951.md)
 #### [ 中共20大前人事猜谜 消息来得慢、名单大不同(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019588.md)
+#### [ 王友群：为审判江泽民、曾庆红等元凶而行动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848951.md)
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663414.md)
 #### [ 诗：中共二十大闹剧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848456.md)
 #### [ 【秦鹏直播】20大习加冕“领袖”欧美齐变脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849038.md)
@@ -41,13 +41,13 @@
 #### [ 习近平二十大报告口误 秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555258.md)
 #### [ 中共二十大谁入常？预测名单现多个版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849395.md)
 #### [ 11名中共高官被查 中纪委隐瞒身份引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555383.md)
-#### [ 三朝政策“粉饰师” 王沪宁或将被弃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555338.md)
 #### [ 二十大习近平讲话口误 全网秒遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019476.md)
+#### [ 三朝政策“粉饰师” 王沪宁或将被弃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555338.md)
 #### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849083.md)
 #### [ 分析：习近平若攻台 将受两大因素阻挠](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848991.md)
 #### [ 与四通桥事件有关？军方二十大表态听习指挥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848489.md)
 #### [ 20大习许诺招募人才 专家：美或祭更多限制](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849014.md)
+#### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663252.md)
+#### [ 传郑州雷人静默3天政策 多种不允许“其实就是宵禁”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019628.md)
 #### [ 胡春华表态挺习长期执政？学者：自保之举](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849448.md)
 #### [ 海外人士中领馆前声援四通桥事件“变革来临”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848737.md)
-#### [ 中国煤都爆疫情 大秦铁路司机集体染疫传工作间“改方舱”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019596.md)
-#### [ 江泽民老家国家级医药两任主管接连落马](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849267.md)
