同步于: 10月21日5时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -37,9 +37,9 @@
 #### [ 【热门话题】二十大习讲话透露可怕目标/二十大人事预测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555731.md)
 #### [ 总理接棒 黑马是他？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663486.md)
 #### [ 四通桥横幅事件发酵 海内外接力声援、响应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849373.md)
+#### [ 习近平二十大报告口误 秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555258.md)
 #### [ 中共二十大谁入常？预测名单现多个版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849395.md)
 #### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849083.md)
-#### [ 习近平二十大报告口误 秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555258.md)
 #### [ 11名中共高官被查 中纪委隐瞒身份引猜测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555383.md)
 #### [ 二十大习近平讲话口误 全网秒遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019476.md)
 #### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849083.md)
@@ -48,6 +48,6 @@
 #### [ 胡春华表态挺习长期执政？学者：自保之举](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849448.md)
 #### [ 与四通桥事件有关？军方二十大表态听习指挥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848489.md)
 #### [ 江泽民朱镕基缺席二十大另有内幕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663252.md)
+#### [ 二十大人事预测：丁薛祥或入常 孟祥锋升中办主任](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555714.md)
 #### [ 20大习许诺招募人才 专家：美或祭更多限制](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849014.md)
 #### [ 弄巧成拙！延发数据猫腻在哪里？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663810.md)
-#### [ 传郑州雷人静默3天政策 多种不允许“其实就是宵禁”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019628.md)
