--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -3,8 +3,8 @@
 #### [ 丁薛祥有望晋升政治局常委 中办副主任孟祥锋或被扶正(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019619.md)
 #### [ 中共20大常委名单出炉？准不准4天后揭晓(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019567.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
 #### [ 习近平的二十大报告极力掩盖一个天大事实(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019520.md)
+#### [ 20大 江泽民未露脸胡锦涛登场 藏玄机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019502.md)
 #### [ 二十大表忠狂潮下 中共恐惧政权垮台(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019526.md)
 #### [ 传闻中的二十大：“黑马”和意外](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663678.md)
 #### [ 习近平近臣谁上位?二十大入常分析各异(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019442.md)
@@ -16,8 +16,8 @@
 #### [ 北京反习抗议扩大？彭立发恐判重刑 莫少平愿辩护(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019594.md)
 #### [ 【远见快评 】李克强裸退 习家军全面上位？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849744.md)
 #### [ 【天亮时分】习打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848838.md)
-#### [ 党媒报导习近平“吾往矣” 网友热议高级黑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849463.md)
 #### [ 习近平加冕“人民领袖”尊称 中国越来越像北韩？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663654.md)
+#### [ 党媒报导习近平“吾往矣” 网友热议高级黑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849463.md)
 #### [ 中共20大前人事猜谜 消息来得慢、名单大不同(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019588.md)
 #### [ 王友群：为审判江泽民、曾庆红等元凶而行动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848951.md)
 #### [ 传反习图片被公安锁定 中国留学生家人遭警告(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019677.md)
@@ -26,8 +26,8 @@
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663414.md)
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663414.md)
 #### [ 胡春华表态挺习长期执政？学者：自保之举](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849448.md)
-#### [ 【热门话题】二十大习讲话透露可怕目标/二十大人事预测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555731.md)
 #### [ 传广东男大白天当街强奸少女 消息被迅速封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555967.md)
+#### [ 【热门话题】二十大习讲话透露可怕目标/二十大人事预测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555731.md)
 #### [ 安徽校花婚后体重狂飙至332斤 减肥后近况曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019592.md)
 #### [ 【秦鹏直播】20大习加冕“领袖”欧美齐变脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849038.md)
 #### [ 章天亮: 习近平打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663636.md)
@@ -45,9 +45,9 @@
 #### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849083.md)
 #### [ 习作报告胡春华意外离场 王丹：常委名单让人跌破眼镜(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019412.md)
 #### [ 中共秘密备战手法曝光 专家：台海战争或提前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13848749.md)
+#### [ “斗争”成外交主线 习连任让外界认清中共本质(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019690.md)
 #### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664002.md)
 #### [ 四通桥横幅事件发酵 海内外接力声援、响应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849373.md)
 #### [ 朝鲜砲火猛开 韩美模拟渡桥演练 台日加强防卫 澳英调查飞行员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663660.md)
 #### [ 二十大新常委“留三进四”?李克强去留成关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849755.md)
 #### [ 总理接棒 黑马是他？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663486.md)
-#### [ 习近平二十大报告口误 秒变敏感词](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555258.md)
