--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -19,13 +19,13 @@
 #### [ 党媒报导习近平“吾往矣” 网友热议高级黑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849463.md)
 #### [ 【天亮时分】习打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848838.md)
 #### [ 习近平加冕“人民领袖”尊称 中国越来越像北韩？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663654.md)
-#### [ 中共20大前人事猜谜 消息来得慢、名单大不同(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019588.md)
 #### [ 传反习图片被公安锁定 中国留学生家人遭警告(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019677.md)
+#### [ 中共20大前人事猜谜 消息来得慢、名单大不同(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019588.md)
 #### [ 王友群：为审判江泽民、曾庆红等元凶而行动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848951.md)
-#### [ 习近平二十大广西讨论日 惊传桂林检察官避捉黄跳楼 国内封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019657.md)
 #### [ 【热门话题】二十大习讲话透露可怕目标/二十大人事预测](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555731.md)
-#### [ 诗：中共二十大闹剧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848456.md)
+#### [ 习近平二十大广西讨论日 惊传桂林检察官避捉黄跳楼 国内封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1019657.md)
 #### [ 传广东男大白天当街强奸少女 消息被迅速封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555967.md)
+#### [ 诗：中共二十大闹剧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848456.md)
 #### [ 胡春华表态挺习长期执政？学者：自保之举](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849448.md)
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/663414.md)
 #### [ 北京突传异常 习近平面临重大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663414.md)
@@ -36,9 +36,9 @@
 #### [ 分析：什么是习近平要挑战的终极？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663750.md)
 #### [ 章天亮: 习近平打包提拔亲信 此人排名最关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663636.md)
 #### [ 王岐山等人缺席二十大代表团讨论](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13848317.md)
+#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664002.md)
 #### [ 习近平加速全面左转？这人去留引关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663966.md)
 #### [ 中共二十大谁入常？预测名单现多个版本](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849395.md)
-#### [ 20大常委人选大竞猜 分析：习政权将非常不稳](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/664002.md)
 #### [ 二十大新常委“留三进四”?李克强去留成关键](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849755.md)
 #### [ 【禁闻】二十大常委名单海外热传 学者解析真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103555074.md)
 #### [ 分析：二十大报告揭习近平缺乏安全感(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019471.md)
@@ -50,4 +50,4 @@
 #### [ 20大报告聚焦安全 分析：中共走上不归路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13849083.md)
 #### [ 习作报告胡春华意外离场 王丹：常委名单让人跌破眼镜(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1019412.md)
 #### [ 四通桥横幅事件发酵 海内外接力声援、响应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13849373.md)
-#### [ 朝鲜砲火猛开 韩美模拟渡桥演练 台日加强防卫 澳英调查飞行员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663660.md)
+#### [ 章天亮: 对二十大结果的分析及给大家的建议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/663939.md)
